--- a/master_style.css
+++ b/master_style.css
@@ -141,6 +141,24 @@ p {
   grid-gap: 100px;
 }
 
+.header-buttons {
+  display: grid;
+  grid-template-columns: 150px 150px;
+  grid-gap: 50px;
+}
+
+.header-buttons a {
+  width: 140px;
+  height: 40px;
+  border: 0;
+  padding: 12px, 12px;
+  outline: none;
+  color: white;
+  background: linear-gradient(to right, #8491fe, #62bcfb);
+  cursor: pointer;
+  border-radius: 3px;
+}
+
 .my-footer {
   display: grid;
   grid-template-columns: 300px 300px 300px;
@@ -190,6 +208,18 @@ p {
   cursor: pointer;
 }
 
+.address-content .fab {
+  font-size: 1rem;
+  background: #1a1a1a;
+  height: 35px;
+  width: 35px;
+  line-height: 35px;
+  text-align: center;
+  border-radius: 50%;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
 .address-content .text {
   font-size: 1.0625rem;
   font-weight: 500;
@@ -227,6 +257,17 @@ footer {
     grid-auto-flow: row;
     grid-template-columns: none;
     grid-gap: 100px;
+  }
+
+  footer {
+    height: 801px;
+  }
+
+  .my-footer {
+    display: grid;
+    grid-auto-flow: row;
+    grid-template-columns: none;
+    grid-gap: 51px;
   }
 
   .profile-col-2 {
